@@ -427,6 +427,8 @@ verilog/parser_bugs.v:441: MODULE  'module' 'bug403_bug404' undef '0'
 verilog/parser_bugs.v:443: ATTRIBUTE  '(* attr *)'
 verilog/parser_bugs.v:443: VAR  'net' 'foo' 'module' 'wire' '' '' ''
 verilog/parser_bugs.v:447: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:449: MODULE  'module' 'bug422' undef '0'
+verilog/parser_bugs.v:452: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: VAR  'net' 'b_i' 'module' 'wire' '' '' ''
 verilog/pinorder.v:008: VAR  'net' 'd_o' 'module' 'wire' '' '' ''
